# sawmill

./: .gitignore  .goreleaser.yml  CLAUDE.md  Cargo.toml  Makefile  README.md  STABILITY.md  agents-guide.md  bullseye.yaml  targets.md  targets.yaml
.github/workflows/: ci.yaml  go.yml  release.yaml  release.yml
docs/: TODO.md  agent-usage-archaeology.md  audit-2026-04-05.md  audit-log.md  convergence-report.md  design.md  discovery-evals.yaml  find-by-concept-verification.md  frontier.md  targets.md
docs/demos/: multi-repo-pr.md  multi-repo-transform.md
docs/papers/: equivalences.md
go/: go.mod  go.sum
go/adapters/: adapter.go  base.go  cpp.go  go_lang.go  python.go  rust_lang.go  typescript.go
go/bisect/: bisect.go  bisect_test.go  predicate.go
go/codegen/: codegen.go  codegen_test.go
go/daemon/: daemon.go  daemon_test.go
go/docs/: audit-log.md
go/e2e/: e2e_test.go
go/embed/: embedder.go  embedder_test.go  mock.go  ollama.go
go/exemplar/: exemplar.go  exemplar_test.go
go/forest/: accessor.go  forest.go  parse_guard.go  parse_guard_test.go  tree_cache.go
go/gitindex/: indexer.go  indexer_test.go  query.go  store.go  store_test.go
go/gitrepo/: gitrepo.go  gitrepo_test.go
go/handshake/: handshake.go
go/index/: edge.go  evidence.go  evidence_test.go  index.go  index_test.go
go/injection/: grammars_test.go
go/jsengine/: jsengine.go  jsengine_test.go
go/lspclient/: diagnostic_code_test.go  jsonrpc.go  lspclient.go  lspclient_test.go  pool.go
go/mcp/: add_field.go  agents-guide.md  auto_fix.go  auto_fix_test.go  concept.go  concept_test.go  concept_verify_test.go  diagnostics_format_test.go  equivalence.go  equivalence_apply_check_test.go  equivalence_test.go  equivalence_transitive_test.go  extract_to_env.go  extract_to_env_test.go  fix.go  fix_test.go  (+24 more)
homebrew/: io.sawmill.daemon.plist  sawmill.rb
src/: codegen.rs  exemplar.rs  forest.rs  index.rs  js_engine.rs  lsp.rs  main.rs  mcp.rs  model.rs  rewrite.rs  store.rs  transform.rs  watcher.rs
(+96 files in other folders)
