[package]
name = "polyrefactor"
version = "0.1.0"
edition = "2024"
description = "AST-level multi-language refactoring MCP server"
license = "Apache-2.0"

[dependencies]
# Parsing
tree-sitter = "0.26"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
streaming-iterator = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# MCP server
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
schemars = "0.8"

# Diffing
similar = "3"

# File traversal
ignore = "0.4"

# Parallelism
rayon = "1"

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Embedded JS (Phase 3 — uncomment when needed)
# rquickjs = { version = "0.11", features = ["bindgen"] }
