[package]
name = "canopy"
version = "0.1.0"
edition = "2024"
description = "Codebase operations platform — AST-level multi-language refactoring MCP server"
license = "Apache-2.0"

[dependencies]
# Parsing
tree-sitter = "0.26"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
streaming-iterator = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# MCP server
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
schemars = "0.8"

# Diffing
similar = "3"

# File traversal
ignore = "0.4"

# Parallelism
rayon = "1"

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Persistence
rusqlite = { version = "0.35", features = ["bundled"] }

# File watching
notify = "8"

# Hashing
blake3 = "1"

# Embedded JS
rquickjs = { version = "0.11", features = ["bindgen", "classes", "properties"] }

# LSP client
lsp-types = "0.97"

# Unix I/O (poll for non-blocking LSP reads)
libc = "0.2"
